# lumenlock

./: .env.example  .gitignore  DEMO.md  README.md
.github/workflows/: deploy.yml  pr-checks.yml
contracts/: Cargo.toml
contracts/escrow-vault/: Cargo.toml
contracts/escrow-vault/src/: lib.rs
contracts/marketplace-registry/: Cargo.toml
contracts/marketplace-registry/src/: lib.rs
contracts/shared-types/: Cargo.toml
contracts/shared-types/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  footer.css  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/activity/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: CreateListingForm.tsx  EscrowPanel.tsx
frontend/app/components/layout/: Navbar.tsx
frontend/app/components/ui/: EmptyState.tsx  ErrorState.tsx  SealIcon.tsx  ToastContainer.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: useListings.ts  useWallet.ts
frontend/app/marketplace/: page.tsx
frontend/app/marketplace/[id]/: page.tsx
frontend/app/services/: contract.ts  observability.ts  stellar.ts
frontend/app/settings/: page.tsx
frontend/app/state/: walletStore.ts
frontend/app/transactions/: page.tsx
frontend/tests/integration/: escrow-flow.test.ts
frontend/tests/unit/: app.test.tsx
scripts/: deploy-local.sh  deploy-testnet.sh
