[package]
name = "lumenlock-shared-types"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["dev-rps"]
repository = "https://github.com/dev-rps/lumenlock"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true }
